[tool.poetry]
name = "polarlight_notifier"
version = "1.0.0"
description = "notifies group about polar light events (taken from https://polarlicht-vorhersage.de)"
authors = ["Torben Carstens <git@carstens.tech>"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
# python-telegram-bot requires this
httpx = "<0.25.3"
python-telegram-bot = "^20.5"
types-beautifulsoup4 = "^4.12.0.6"
kubernetes = "^28.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pytest = "^7.4.0"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    # "error",
]

[[tool.mypy.overrides]]
# the kubernetes-typed package isn't compatible with mypy >0.19
module = "kubernetes.*"
ignore_missing_imports = true
